2018-06-08      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/el/g-mode.el:  interim checkin, keyword editing
          complete (minus delete key).

2018-06-07      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/el/g-mode.el:  interim checkin.
	* gm2/el/g-mode.el:  another interim checkin in
	  the development of lowercase keywords.

2018-05-24      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-gcc/m2expr.c:  (BuildNotEqualToZero)
          new function.  (checkWholeNegateOverflow)
          re-implemented and in the process fixed bug
	  and the test
          testsuite/gm2/switches/check-all/run/fail/intrange5.mod
	  passes.
          (m2expr_Build4LogicalAnd)  New function.
	* gm2/gm2-gcc/m2expr.c:  renamed BuildLogicalAndIf
          to BuildTruthAndIf and renamed BuildLogicalOrIf
	  to BuildTruthOrIf.

2018-05-23      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* implement range checks on whole number multiply.
	* gm2/gm2-compiler/M2GenGCC.mod:  import BuildMultCheck.
          Call CodeMultCheck in quadruple case statement.
          (CodeMultChecked)  New procedure.  (CodeMultCheck)
          New procedure.
	* gm2/gm2-gcc/m2expr.c:  (checkWholeNegateOverflow)
          interm checkin.  (checkWholeSubOverflow) corrected
          comment.  (m2expr_Build3LogicalAnd)  New function.
          (m2expr_Build4LogicalOr)  New function.
          (checkWholeMultOverflow)  New function.
          (checkWholeOverflow)  New function.
          (m2expr_BuildMultCheck)  New function.
	* gm2/gm2-gcc/m2expr.def:  BuildMultCheck exported.
	* gm2/gm2-gcc/m2expr.h:  BuildMultCheck defined.
	* gm2/gm2-gcc/m2expr.c:  added missing semicolon.

2018-04-16      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/Make-lang.in:  changed the plugin directory to
          plugin rather than gm2/plugin.  Corrected .so typeos.
	* gm2/gm2.texi:  Semantic checking (New section).
	* testsuite/gm2/iso/analysis/fail/gm2.exp:  New file.
