@@ -1,3 +1,9 @@
+2018-06-11      Gaius Mulley <gaius.mulley@southwales.ac.uk>
+
+	* gm2/el/g-mode.el:  added defcustom declarations
+          and fixed some regexp bugs.  Applied some defcustom
+          implementation features.
+
 2018-06-08      Gaius Mulley <gaius.mulley@southwales.ac.uk>
 
 	* gm2/el/g-mode.el:  interim checkin, keyword editing
